--- a/index.html
+++ b/index.html
@@ -7,27 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
-<body>
+<header>
   <h1>株式会社TECH</h1>
   <ul>
-    <a href="#">
-      <li>ホーム</li>
-    </a>
-    <a href="#">
-      <li>企業情報</li>
-    </a>
-    <a href="#">
-      <li>会社概要</li>
-    </a>
-    <a href="#">
-      <li>よくある質問</li>
-    </a>
-    <a href="#">
-      <li>お問い合わせ</li>
-    </a>
+    <li><a href="#">ホーム</a></li>
+    <li><a href="#">企業情報</a></li>
+    <li><a href="#">会社概要</a></li>
+    <li><a href="#">よくある質問</a></li>
+    <li><a href="#">お問い合わせ</a></li>
   </ul>
   <img src="img/mv.png" alt="mv.png">
+</header>
+
+<body>
   <p>最新のテクノロジーで<em>社会課題</em>を解決</p>
   <h2>会社概要</h2>
   <table>
@@ -66,7 +58,9 @@
       <input type="submit" value="お申し込み">
     </label>
   </form>
-  <small>&copy;2020 TECH inc.</small>
 </body>
+<footer>
+  <small>&copy;2020 TECH inc.</small>
+</footer>
 
 </html>
