--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<header>
-  <h1>株式会社TECH</h1>
-  <ul>
-    <li><a href="#">ホーム</a></li>
-    <li><a href="#">企業情報</a></li>
-    <li><a href="#">会社概要</a></li>
-    <li><a href="#">よくある質問</a></li>
-    <li><a href="#">お問い合わせ</a></li>
-  </ul>
-  <img src="img/mv.png" alt="mv.png">
-</header>
 
 <body>
+  <header>
+    <h1>株式会社TECH</h1>
+    <ul>
+      <li><a href="#">ホーム</a></li>
+      <li><a href="#">企業情報</a></li>
+      <li><a href="#">会社概要</a></li>
+      <li><a href="#">よくある質問</a></li>
+      <li><a href="#">お問い合わせ</a></li>
+    </ul>
+    <img src="img/mv.png" alt="mv.png">
+  </header>
   <p>最新のテクノロジーで<em>社会課題</em>を解決</p>
   <h2>会社概要</h2>
   <table>
@@ -50,17 +50,15 @@
   </table>
   <h2>お問い合わせ</h2>
   <form action="index.html" method="get">
-    <label>
-      会社名<input type="text" name="company name"><br>
-      お名前<input type="text" name="name"><br>
-      メールアドレス<input type="email"><br>
-      お問い合わせ内容<textarea name="textarea" cols="30" rows="3"></textarea><br>
-      <input type="submit" value="お申し込み">
-    </label>
+    <label>会社名<input type="text" name="company name"></label><br>
+    <label>お名前<input type="text" name="name"></label><br>
+    <label>メールアドレス<input type="email"></label><br>
+    <label>お問い合わせ内容<textarea name="textarea" cols="30" rows="3"></textarea></label><br>
+    <input type="submit" value="お申し込み">
   </form>
+  <footer>
+    <small>&copy;2020 TECH inc.</small>
+  </footer>
 </body>
-<footer>
-  <small>&copy;2020 TECH inc.</small>
-</footer>
 
 </html>
